Fix : correction du système light, dark mode

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,6 +11,13 @@
     --delete-color: #ff6b6b;
     --transition-speed: 0.3s;
 }
+[data-theme="dark"] {
+    --text-color: #FFFFFF;
+    --bg-color: #020618;
+    --bg-todo-list: #0f172a;
+    --bg-task: #1e293b;
+    --border-color: #2d3748;
+}
 
 * {
     margin: 0;
@@ -25,26 +32,8 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    scrollbar-width: thin;
-    scrollbar-color: var(--scrollbar-thumb) transparent;
     transition: background-color var(--transition-speed);
 }
-
-
-
-body::-webkit-scrollbar {
-    width: 8px;
-}
-
-body::-webkit-scrollbar-thumb {
-    background-color: var(--scrollbar-thumb);
-    border-radius: 4px;
-}
-
-body::-webkit-scrollbar-thumb:hover {
-    background-color: var(--scrollbar-thumb-hover);
-}
-
 /* Conteneur principal */
 .container {
     max-width: 800px;
@@ -564,6 +553,10 @@ body::-webkit-scrollbar-thumb:hover {
 .tasks-count {
     font-size: 0.9rem;
     color: rgba(255, 255, 255, 0.7);
+}
+/* Light mode */
+body.light-mode .tasks-count {
+    color: rgba(51, 51, 51, 0.7); /* Gris foncé semi-transparent */
 }
 
 .completed-count {
